2005-10-28  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/core.c (installer_callback): Make up some generic details
	when details should be shown, but there aren't any.
	(list_packages): Leave size column completely empty.
	
2005-10-26  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/core.c (append_list_strings): Do not output space before
	package name.

2005-09-27  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 2.11

	* src/core.c (format_relationship_failures): Use
	SUPPRESS_FORMAT_WARNING appropriately.

2005-09-20  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/core.c (format_relationship_failures): Do not try to be
	clever with the full-stops at the end of
	ai_error_componentmissing.  It is expected that translations do
	not contain the full-stop.

2005-09-19  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/ui/represent.h, src/ui/represent.c (present_error_details):
	added help_key argument.  Changed all callers.
	* src/core.c (check_dependencies): Use correct help_key for error
	dialog.
	
2005-09-13  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/core.c (format_relationship_failures): Append "." only for
	translations of ai_error_componentmissing that do not already end
	with one.

	Released 2.10.

	* maemo.dirs: Added usr/share/applications/hildon-control-panel,
	usr/lib/hildon-control-panel, usr/lib/hildon-home,
	usr/lib/hildon-status-bar, and usr/share/icons/hicolor.

	* src/core.c (package_file_info): Set info structu members to
	non-NULL only after all error cases have been handled.

2005-09-12  Marius Vollmer  <marius.vollmer@nokia.com>

	Make sure that no untranslated texts are being displayed.
	
	* src/core.c (list_packages, package_description, do_copy,
	install_package_from_uri, check_dependencies): Use "Operation
	failed" text from osso-filemanager text domain instead of more
	descriptive texts.
	(format_relationship_failures): Hack together a translated message
	for displaying conflicts.